Fixed margin spacing bug on mobile view on index page and spacing in catalogue page panels

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
     text-align: justify;
     border-radius: 2px;
     padding: 10px;
-    margin: 0;
+    margin: 0 0 10px 0;
     font-size: 1.5rem; 
 }
 
@@ -147,7 +147,7 @@ nav.brand-logo {
     font-size: 12px;
     color:#ffffff;
     padding: 10px;
-    margin: 5px 0px;
+    margin: 0 0 10px 0;
     
 }
 
